communicating b/w marked data handler and book builder